--- a/source-design/css/anystyle.css
+++ b/source-design/css/anystyle.css
@@ -418,15 +418,15 @@ opacity: 1;
 /*--------------------------------------------------------------------------Charts.html*/
 /*-------------------------Number charts*/
 .chart-number{
-  height: 3rem;
-  margin-top: 25px;
+  overflow: hidden;
+  margin: 5px;
 }
 .chart-number::after{
   left: 0;
   bottom: 0;
   display: block;
   height: 1px;
-  width: 90%;
+  width: 100%;
   content: '';
   background-color: #c0a062;
 }
@@ -434,27 +434,53 @@ opacity: 1;
   text-align: center;
   width: 7%;
   padding-left: 0%;
+}
+.number{
+  font-size: 1.72rem ;
   float: left;
 }
 .one{
-  font-size: 3rem;
-  height: 4rem;
+  font-size: 4rem;
+  height: 5rem;
   background-color: darkorange;
-  text-shadow: 1px 1px #ffffff,1px 2px #ffffff,2px 3px #ffffff,3px 4px #ffffff;
+  text-shadow: 1px 1px #ffffff, 2px 2px #ffffff, 3px 3px #ffffff, 4px 4px #ffffff;
 }
 .two{
-  font-size: 2rem;
-  height: 3rem;
+  font-size: 3rem;
+  height: 4rem;
   background-color: darkcyan;
-  text-shadow: 1px 1px #ffffff,1px 2px #ffffff,2px 3px #ffffff,3px 4px #ffffff;
+  text-shadow: 1px 1px #ffffff, 2px 2px #ffffff, 3px 3px #ffffff;
 }
 .three{
-  font-size: 1.2rem;
-  height: 2rem;
+  font-size: 2rem;
+  height: 2.5rem;
   background-color:lawngreen;
-  text-shadow: 1px 1px #ffffff,1px 2px #ffffff,2px 3px #ffffff,3px 4px #ffffff;
+  text-shadow: 1px 1px #ffffff, 2px 2px #ffffff;
 }
 .info-number{
-  width: 90%;
+  font-size: 20px;
+  width: 60%;
+  margin-left:10px;
+  float: left;
+}
+.info-number >a{
+  display: block;
+  color: #000000;
+  text-decoration: none;
+}
+.info-number >a:hover{
+  color: #c0a062;
+}
+.info-number.once{
+  font-size: 3rem;
+}
+.info-number.twoo{
+  font-size: 2rem;
+}
+.info-number.threee{
+  font-size: 1.8rem;
+}
+.info-charts{
+  width: 30%;
   float: left;
 }
