--- a/source-design/css/anystyle.css
+++ b/source-design/css/anystyle.css
@@ -417,6 +417,24 @@ opacity: 1;
 
 /*--------------------------------------------------------------------------Charts.html*/
 /*-------------------------Number charts*/
+@media screen and (max-width: 812px) {
+  .chart-number .number{
+    text-align: center;
+    width: 100%;
+  }
+  .info-number.once{
+    font-size: 2rem;
+  }
+  .info-charts {
+    font-size: 0.9rem;
+  }
+  .info-number.twoo{
+    font-size: 1.5rem;
+  }
+  .info-number.threee{
+    font-size: 1.2rem;
+  }
+}
 .chart-number{
   overflow: hidden;
   margin: 5px;
@@ -430,10 +448,21 @@ opacity: 1;
   content: '';
   background-color: #c0a062;
 }
-.chart-number .number{
-  text-align: center;
-  width: 7%;
-  padding-left: 0%;
+@media screen and (min-width: 812px) {
+  .chart-number .number{
+    text-align: center;
+    width: 7%;
+    padding-left: 0%;
+  }
+  .info-number.once{
+    font-size: 3rem;
+  }
+  .info-number.twoo{
+    font-size: 2rem;
+  }
+  .info-number.threee{
+    font-size: 1.8rem;
+  }
 }
 .number{
   font-size: 1.72rem ;
@@ -471,16 +500,114 @@ opacity: 1;
 .info-number >a:hover{
   color: #c0a062;
 }
-.info-number.once{
-  font-size: 3rem;
-}
-.info-number.twoo{
-  font-size: 2rem;
-}
-.info-number.threee{
-  font-size: 1.8rem;
-}
+
 .info-charts{
   width: 30%;
   float: left;
+}
+/*---------------------------------------Profile.html*/
+
+
+.our-team {
+  padding: 30px 0 40px;
+  margin-bottom: 30px;
+  background-color: #f7f5ec;
+  text-align: center;
+  overflow: hidden;
+  position: relative;
+}
+
+.our-team .picture {
+  display: inline-block;
+  height: 130px;
+  width: 130px;
+  margin-bottom: 50px;
+  
+  position: relative;
+}
+
+.our-team .picture::before {
+  content: "";
+  width: 100%;
+  height: 0;
+  border-radius: 50%;
+  background-color: #000;
+  position: absolute;
+  bottom: 135%;
+  right: 0;
+  left: 0;
+  opacity: 0.9;
+  transform: scale(3);
+  transition: all 0.3s linear 0s;
+}
+
+.our-team:hover .picture::before {
+  height: 100%;
+}
+
+.our-team .picture::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #000;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.our-team .picture img {
+  width: 100%;
+  height: auto;
+  border-radius: 50%;
+  transform: scale(1);
+  transition: all 0.9s ease 0s;
+  z-index: -100;
+}
+
+.our-team:hover .picture img {
+  box-shadow: 0 0 0 14px #000;
+  transform: scale(0.7);
+}
+
+.our-team .title {
+  display: block;
+  font-size: 15px;
+  color: #000;
+  text-transform: capitalize;
+}
+
+.our-team .social {
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  background-color: #000;
+  color: #fff;
+  position: absolute;
+  bottom: -100px;
+  left: 0;
+  transition: all 0.5s ease 0s;
+}
+
+.our-team:hover .social {
+  bottom: 0;
+}
+
+.our-team .social li {
+  display: inline-block;
+}
+
+.our-team .social li a {
+  display: block;
+  padding: 5px;
+  font-size: 17px;
+  color: white;
+  transition: all 0.3s ease 0s;
+  text-decoration: none;
+}
+
+.our-team .social li a:hover {
+  color: #1369ce;
+  background-color: #f7f5ec;
 }
